Small tweaks/cleanup

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,11 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>
+  Welcome to {{title}}
+  <br>
+  © Nick Barrow 2022
+  <br>
+  For use by Ferguson Advertising only.
+</p>
 <hr />
 
 <a href="/anagram">Anagram Test</a>
